fixed an overlap in public hols presentation

--- a/employee/static/css/profile.css
+++ b/employee/static/css/profile.css
@@ -1,5 +1,9 @@
 @charset "utf-8";
 
+#profile-view {
+	width: auto;
+}
+
 .profile-form {
 	width: 20%;
 	position: relative;
